force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/LLC_BI__Policy_Exception_Template__c.object-meta.xml
<CustomObject>
    <description>The object store Policy Exception templates. The content of the object is created by an Administrator. The template defines the options that are available when a policy exception is added by a user.</description>
    <label>Policy Exception Template</label>
    <nameField>
        <label>Policy Exception Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Exception Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>