force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__Severities__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Severities__c</fullName>
    <description>This field is optional and is used to specify the available severity selections a user can make when applying this policy exception. This is a multiselect picklist and allows the admin to control how many and which severities can be applied. The picklist can be edited to include all severities pertinent to the financial institution&apos;s business practices.</description>
    <label>Severities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>