force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/fields/LLC_BI__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This field is required and is used to specify the start date of the existing policy exception templates.  Setting when the template will become &quot;active&quot; and can be used.. Before this date the template will be considered as inactive and the user cannot create a new policy exception using the template.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>