force-app/main/default/objects/LLC_BI__Policy_Exception_Template__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Type__c</columns>
    <columns>LLC_BI__Code__c</columns>
    <columns>LLC_BI__Severities__c</columns>
    <columns>LLC_BI__Active__c</columns>
    <columns>LLC_BI__Start_Date__c</columns>
    <columns>LLC_BI__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>